# ChatClient

./: .gitignore  CMakeLists.txt  chat.cpp  chat.h  chat.ui  mainwindow.cpp  mainwindow.h  resourse.qrc
Chats/: listwidget.cpp  listwidget.h  listwidgetitem.cpp  listwidgetitem.h
Dialog/: dialogchoosesmile.cpp  dialogchoosesmile.h  dialogchoosesmile.ui  dialogsettingchat.cpp  dialogsettingchat.h  dialogsettingchat.ui  dialogsign.cpp  dialogsign.h  dialogsign.ui
